Limited suggestions on the colobiam risk assessment systems

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
 
     <ul>
       <li><a href="presentations/colombia_oct_2015/index.html">Presentation on Colombia, Oct 2015</a>.</li>
+      <li><a href="presentations/colombia_oct_2015/suggested_architecture.html">Limited sugggestion on architecture for Colombia risk assessment systems, Oct 2015</a>.</li>
       <li><a href="architecture/index.html">General Architecture view</a>.</li>
     </ul>
   </div>
