link to nuvem and infra doc

--- a/index.html
+++ b/index.html
@@ -21,6 +21,8 @@
       <li><a href="presentations/colombia_oct_2015/index.html">Presentation on Colombia, Oct 2015</a>.</li>
       <li><a href="presentations/colombia_oct_2015/suggested_architecture.html">Limited sugggestion on architecture for Colombia risk assessment systems, Oct 2015</a>.</li>
       <li><a href="architecture/index.html">General Architecture view</a>.</li>
+      <li><a href="http://github.com/cncflora/nuvem">Nuvem - How to run all APPs</a></li>
+      <li><a href="https://docs.google.com/a/cncflora.net/document/d/1ifZlENEGp99WZbC7leAEHMaFw_-MZUpZIje5RbSYO74/edit?usp=sharing">(Private) Document describing the infrastructure</a></li>
     </ul>
   </div>
 
